# open_deep_research

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .prettierrc  AGENTS.md  CLAUDE.md  README.md  locustfile.py  package-lock.json  package.json  pyproject.toml
.trae/specs/integrate-plan-execute-into-deep-researcher/: checklist.md  spec.md  tasks.md
.trae/specs/split-rag-config/: checklist.md  spec.md  tasks.md
data/knowledge/public_opinion/: README.md
data/knowledge/public_opinion/compliance/: china_regulatory_landscape.md
data/knowledge/public_opinion/faq/: media_response_faq.json  (+1 more)
data/memory/public_opinion/: memories.jsonl
data/social_media/: bulk_mock_posts.jsonl  sample_posts.jsonl
docs/: graphrag_effectiveness.md  index.md  public_opinion_agents.md  social_media_skill_mcp.md
docs/.vitepress/: config.mts
docs/architecture/: agent-loop.md  memory.md  rag-design-rationale.md  rag-notes.md  rag.md  technical-stack.md  tools.md
docs/evaluation/: rag-retrieval-test-records.md
docs/examples/: arxiv.md  inference-market-gpt45.md  inference-market.md  pubmed.md
docs/guide/: project-readme.md  social-media-skill.md
docs/knowledge/: data-governance.md  github-testsets.md  misleading-archive.md  team-handbook.md
docs/legacy/: claude.md  legacy.md
docs/project/: agents.md  claude.md  project-review-and-improvements.md
examples/: rag_local_search.py
examples/rag_data/: faq.json  runbook.txt  team_handbook.md
src/legacy/: legacy.md
src/open_deep_research/: budget.py  configuration.py  deep_researcher.py  prompts.py  social_media_apify_api.py  social_media_mcp.py  state.py  utils.py
src/open_deep_research/mcp/: __init__.py  domain_filter.py  tool_wrapper.py  tools.py
src/open_deep_research/memory/: __init__.py  context.py  extractor.py  store.py  types.py  writer.py
src/open_deep_research/public_opinion_agents/: __init__.py  base.py  internal_knowledge.py  public_signal.py  registry.py  response_strategy.py  risk_assessment.py
src/open_deep_research/rag/: __init__.py  citations.py  code_languages.py  config.py  elasticsearch_bm25.py  embeddings.py  graph.py  graph_adaptive.py  graph_scoring.py  graph_structured.py  graph_terms.py  indexer.py  loaders.py  mcp_server.py  memory.py  memory_writer.py  metadata.py  mysql_memory.py  query_images.py  query_rewriter.py  reranker.py  retriever.py  service.py  splitter.py  tooling.py  types.py  vectorstore.py
src/open_deep_research/social_media/: tools.py
src/open_deep_research/tools/: __init__.py  rag_tool.py
src/open_deep_research/web/: __init__.py  server.py
tests/: agent_stress.py  debug_run.py  evaluate_rag_retrieval.py  rag_eval_cases.jsonl  rag_eval_cases_github.jsonl  sweep_graph_params.py  test_budget.py  test_graph_rag_ablation.py  test_public_opinion_agents.py  test_rag.py  test_rag_mcp_server.py  test_rag_retrieval_evaluation.py  test_social_media_skill.py
(+11 files in other folders)
